--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -57,3 +57,18 @@ autoscaling:
   maxReplicas: 4
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
+
+environments:
+  prod:
+    projectenv: prod
+  qa:
+    projectenv: qa
+  relqa:
+    projectenv: relqa 
+  pvt-dev:
+    projectenv: pvt-dev
+  pvt-CI: 
+    projectenv: pvt-CI
+
+global:
+  environment: production 
