--- a/charts/hasura/charts/anaheim-authentication-service/values.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/values.yaml
@@ -33,5 +33,17 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
-AWS:
-  accountId: ""
+environments:
+  prod:
+    projectenv: prod
+  qa:
+    projectenv: qa
+  relqa:
+    projectenv: relqa 
+  pvt-dev:
+    projectenv: pvt-dev
+  pvt-CI: 
+    projectenv: pvt-CI
+
+global:
+  environment: production 
