--- a/charts/anaheim-release-portal/templates/portal-params.yaml
+++ b/charts/anaheim-release-portal/templates/portal-params.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: "{{ .Release.Name }}-configmap"
 data:
+  VITE_DEV_APP_TRAINING: "/training-portlet/assets/remoteEntry.js"
+  VITE_DEV_APP_VERIFICATION: "/verify/assets/remoteEntry.js"
   VITE_PROJECTS_API: "/projects"
   VITE_ASSETS_API: "/training-assets"
   VITE_ANNOTATOR_API: "/annotations"
