Added unify tag

--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -59,16 +59,16 @@ autoscaling:
   targetMemoryUtilizationPercentage: 80
 
 environments:
-  prod:
-    projectenv: prod
-  qa:
-    projectenv: qa
-  relqa:
-    projectenv: relqa 
-  pvt-dev:
-    projectenv: pvt-dev
-  pvt-CI: 
-    projectenv: pvt-CI
+  wprod:
+    projectenv: wprod
+  wqa:
+    projectenv: wqa
+  wrelqa:
+    projectenv: wrelqa 
+  wdev:
+    projectenv: wdev
+  wci: 
+    projectenv: wci
 
 global:
   environment: production 
