--- a/charts/anaheim-feature-flags-service/values.yaml
+++ b/charts/anaheim-feature-flags-service/values.yaml
@@ -46,16 +46,16 @@ autoscaling:
 
 
 environments:
-  prod:
-    projectenv: prod
-  qa:
-    projectenv: qa
-  relqa:
-    projectenv: relqa 
-  pvt-dev:
-    projectenv: pvt-dev
-  pvt-CI: 
-    projectenv: pvt-CI
+  wprod:
+    projectenv: wprod
+  wqa:
+    projectenv: wqa
+  wrelqa:
+    projectenv: wrelqa 
+  wdev:
+    projectenv: wdev
+  wci: 
+    projectenv: wci
 
 global:
   environment: production 
