--- a/charts/hasura/values.yaml
+++ b/charts/hasura/values.yaml
@@ -21,13 +21,6 @@ image:
   env:
     - name: ENVIRONMENT
       value: ""  
-  # env:
-    # enable the console served by server
-    - name: HASURA_GRAPHQL_ENABLE_CONSOLE
-      value: "true" # set to "false" to disable console
-      ## enable debugging mode. It is recommended to disable this in production
-    - name: HASURA_GRAPHQL_DEV_MODE
-      value: "true"
     - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
       value: startup, http-log, webhook-log, websocket-log, query-log
       # We have a readonly role for all users other than Hasura GraphQL admin
@@ -63,3 +56,17 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
+environments:
+  wprod:
+    projectenv: wprod
+  wqa:
+    projectenv: wqa
+  wrelqa:
+    projectenv: wrelqa 
+  wdev:
+    projectenv: wdev
+  wci: 
+    projectenv: wci
+
+global:
+  environment: production 
