--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -79,6 +79,12 @@ spec:
               ## enable debugging mode. It is recommended to disable this in production
             - name: HASURA_GRAPHQL_DEV_MODE
               value: "false"
+          {{ else }}
+            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
+              value: "true" # set to "false" to disable console
+              ## enable debugging mode. It is recommended to disable this in production
+            - name: HASURA_GRAPHQL_DEV_MODE
+              value: "true"
           {{- end }}
           {{- if .Values.image.env }}
             {{- toYaml .Values.image.env | nindent 12 }}
