--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -18,6 +18,9 @@ AWS:
   aws_project_sqs_url: YOUR_AWS_PROJECT_SQS_URL
   aws_model_s3_uri_path: YOUR_AWS_MODEL_S3_URI_PATH
   duclo_api_key: YOUR_DUCLO_API_KEY
+  vite_datadog_client_token : YOUR_DATADOG_CLIENT_TOKEN
+  vite_datadog_url : YOUR_DATADOG_URL 
+
   env: YOUR_ENV_VARIABLE
 
 dockerCredentials:
