--- a/charts/anaheim-portal/templates/deployment.yaml
+++ b/charts/anaheim-portal/templates/deployment.yaml
@@ -63,12 +63,12 @@ spec:
             - name: VITE_DATADOG_CLIENT_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: "datadog-secret"
+                  name: "dd-secret"
                   key: VITE_DATADOG_CLIENT_TOKEN
             - name: VITE_DATADOG_URL
               valueFrom:
                 secretKeyRef:
-                  name: "datadog-secret"
+                  name: "dd-secret"
                   key: VITE_DATADOG_URL
             - name: DD_ENV
               valueFrom:
