Added all app env node

--- a/charts/anaheim-oncloud-clip-service/templates/deployment.yaml
+++ b/charts/anaheim-oncloud-clip-service/templates/deployment.yaml
@@ -88,6 +88,13 @@ spec:
                 configMapKeyRef:
                   name: duclo-configmap
                   key: DUCLO_AUTH_CERTS_URL
+            {{ if or (eq .Values.global.environment "wprod") (eq .Values.global.environment "wqa") }}
+            - name: NODE_ENV
+              value: "production"
+            {{ else }}
+            - name: NODE_ENV
+              value: "development"
+          {{- end }}
           {{- if .Values.image.env }}
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
