DEVO-1902: added PROJECT_SERVICE_API_URL variable

--- a/charts/anaheim-flexai-devices-service/values.yaml
+++ b/charts/anaheim-flexai-devices-service/values.yaml
@@ -11,6 +11,8 @@ image:
   readinessProbe: healthcheck
   hostname: anaheim-flexai-devices-service
   env:
+    - name: PROJECT_SERVICE_API_URL
+      value: " "
     - name: ENVIRONMENT
       value: " "
     - name: GRAPHQLURL
