--- a/charts/anaheim-flexai-devices-service/values.yaml
+++ b/charts/anaheim-flexai-devices-service/values.yaml
@@ -12,7 +12,7 @@ image:
   hostname: anaheim-flexai-devices-service
   env:
     - name: PROJECT_SERVICE_API_URL
-      value: " "
+      value: "http://anaheim-project-service:3014"
     - name: ENVIRONMENT
       value: " "
     - name: GRAPHQLURL
