--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -17,6 +17,8 @@ image:
   env:
     - name: ENVIRONMENT
       value: " "
+    - name: NODE_ENV
+      value: "production"
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: API_ANNOTATION_SERVICE
