--- a/charts/anaheim-feature-flags-service/values.yaml
+++ b/charts/anaheim-feature-flags-service/values.yaml
@@ -18,6 +18,8 @@ image:
   env:
     - name: ENVIRONMENT
       value: " "
+    - name: NODE_ENV
+      value: "production"
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
 
