--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -19,6 +19,8 @@ image:
   env:
     - name: ENVIRONMENT
       value: " "  
+    - name: NODE_ENV
+      value: "production"
     - name: PROJECTS_API_URL
       value: "http://anaheim-project-service:3014"
     - name: GRAPHQLURL
