feat: add secret to flexai dvice service

--- a/charts/anaheim-flexai-devices-service/templates/deployment.yaml
+++ b/charts/anaheim-flexai-devices-service/templates/deployment.yaml
@@ -53,6 +53,8 @@ spec:
           envFrom: 
             - secretRef:
                 name: "hasura-secret"
+            - secretRef:
+                name: "hasura-postgresql-secret"
             - configMapRef:
                 name: duclo-configmap
           env: 
