--- a/charts/anaheim-baseline/templates/aws-sqs-secret.yaml
+++ b/charts/anaheim-baseline/templates/aws-sqs-secret.yaml
@@ -7,3 +7,5 @@ data:
   AWS_SQS_URL: {{ .Values.AWS.sqs_url | b64enc }}
   AWS_PROJECT_SQS_URL: {{ .Values.AWS.aws_project_sqs_url | b64enc }}
   AWS_PROJECT_SQS_NAME: {{ .Values.AWS.aws_project_sqs_name | b64enc }}
+  AWS_LICENSE_SQS_URL: {{ .Values.AWS.aws_license_sqs_url | b64enc }}
+  AWS_LICENSE_SQS_NAME: {{ .Values.AWS.aws_license_sqs_name | b64enc }}
