--- a/charts/anaheim-licensing-adapter/templates/deployment.yaml
+++ b/charts/anaheim-licensing-adapter/templates/deployment.yaml
@@ -65,6 +65,16 @@ spec:
                 secretKeyRef:
                   name: aws-eventbridge-secret
                   key: AWS_ACCESS_KEY
+            - name: AWS_LICENSE_SQS_URL
+              valueFrom:
+                secretKeyRef:
+                  name: aws-sqs-secret
+                  key: AWS_LICENSE_SQS_URL
+            - name: AWS_LICENSE_SQS_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-sqs-secret
+                  key: AWS_LICENSE_SQS_NAME
             - name: AWS_PROJECT_SQS_URL
               valueFrom:
                 secretKeyRef:
