feat: add anotation

--- a/charts/anaheim-flexai-devices-service/templates/serviceaccount.yaml
+++ b/charts/anaheim-flexai-devices-service/templates/serviceaccount.yaml
@@ -10,5 +10,10 @@ metadata:
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
+    {{- if eq .Values.environment "wdev" }}
+      eks.amazonaws.com/role-arn: {{ .Values.eksiamrole.wdev }}
+    {{- else if eq .Values.environment "wci" }}
+      eks.amazonaws.com/role-arn: {{ .Values.eksiamrole.wci }}
+    {{- end }}
   {{- end }}
 {{- end }}
