--- a/charts/anaheim-flexai-devices-service/values.yaml
+++ b/charts/anaheim-flexai-devices-service/values.yaml
@@ -47,6 +47,11 @@ serviceAccount:
   annotations: {}
   name: ""
 
+
+eksiamrole:
+  wdev: arn:aws:iam::918169021225:role/role-wddl-dev-flexai-device-sa
+  wci: arn:aws:iam::040054290357:role/role-wddl-ci-flexai-device-sa
+
 podAnnotations:
   admission.datadoghq.com/js-lib.version: v3.6.0
 
