--- a/charts/anaheim-flexai-devices-service/templates/serviceaccount.yaml
+++ b/charts/anaheim-flexai-devices-service/templates/serviceaccount.yaml
@@ -14,6 +14,8 @@ metadata:
       eks.amazonaws.com/role-arn: {{ .Values.eksiamrole.wdev }}
     {{- else if eq .Values.environment "wci" }}
       eks.amazonaws.com/role-arn: {{ .Values.eksiamrole.wci }}
+    {{- else if eq .Values.environment "wqa" }}
+      eks.amazonaws.com/role-arn: {{ .Values.eksiamrole.wqa }}
     {{- end }}
   {{- end }}
 {{- end }}
