add: status-middleware

--- a/charts/anaheim-job-scheduler/values.yaml
+++ b/charts/anaheim-job-scheduler/values.yaml
@@ -4,6 +4,7 @@ domainPath: "job-scheduler"
 forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
 authResponseHeadersRegex Regex: ^X-
 trustForwardHeader: true
+licenseAuthaddress: http://anaheim-licensing-adapter:3029/license/status-middleware
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-job-scheduler
