--- a/charts/anaheim-job-scheduler/values.yaml
+++ b/charts/anaheim-job-scheduler/values.yaml
@@ -21,6 +21,8 @@ image:
       value: "production"
     - name: APIURLPROJECTS
       value: "http://anaheim-project-service:3014"
+    - name: GRAPHQLURL
+      value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
