--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -5,7 +5,9 @@ forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-servic
 authResponseHeadersRegex Regex: ^X-
 trustForwardHeader: true
 licenseAuthaddress: http://anaheim-licensing-adapter:3029/license/status-middleware
-
+securityContext:
+  runAsUser: 0  
+  runAsGroup: 0
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/anaheim-training-assets-service
